# somethingfun

./: .gitignore  BUILD  README.md  WORKSPACE  run_formatter.sh
bots/ssi_nav_bot/: Pipfile  config.py  main.py  ssi.py
examples/ftxui/: BUILD  vbox.cpp
games/asteroid/: Animator.cpp  Animator.hpp  AssetManager.cpp  AssetManager.hpp  Asteroid.cpp  Asteroid.hpp  BUILD  Bullet.cpp  Bullet.hpp  CMakeLists.txt  Collision.cpp  Collision.hpp  Explosion.cpp  Explosion.hpp  Game.cpp  Game.hpp  SpaceShip.cpp  SpaceShip.hpp  animator.cc  animator.h  asset_manager.cc  asset_manager.h  asteroid.cc  asteroid.h  bullet.cc  bullet.h  collision.cc  collision.h  explosion.cc  explosion.h  game.cc  game.h  main.cc  main.cpp  spaceship.cc  spaceship.h
